--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body onload="onLoad()">
+<body onload="onLoad()" onkeydown="hide()" onkeypress="hide()" >
     <!------------------------------------------------------------------------->
     <!-- NAVBAR SECTION -->
     <!------------------------------------------------------------------------->
